# rex

./: .gitignore  CMakeLists.txt  Execution_Flow.dia~  README  README.md  Rex.cpp  examplar.cpp  main.cpp
conf/: config.json
conf/plans/: test.plan
conf/units/: all_test.units
design/: Execution_Flow.dia  Target Execution Flow.txt
doc/: Config.md  README.md  SUMMARY.md
doc/design/: Target Execution Flow.txt
sample/: rex.config
sample/components/: curses_dialog.bash  fail.bash  independent_test_1.bash  independent_test_2.bash
sample/environments/: rex.variables
sample/plans/: atomic.plan
sample/shells/: bash.shell  ksh.shell  shells.definitions
sample/units/: .new.units.swp  new.units
src/: loaders.cpp  loaders.h
src/Logger/: Logger.cpp  Logger.h
src/Sproc/: Sproc.cpp  Sproc.h
src/config/: Config.cpp  Config.h
src/json/: jsoncpp.cpp
src/json_support/: JSON.cpp  JSON.h
src/lcpex/: Contexts.cpp  Contexts.h  FileHandle.h  helpers.cpp  helpers.h  liblcpex.cpp  liblcpex.h
src/loaders/: Conf.cpp  Conf.h  JLoader.cpp  JLoader.h  JSON_Loader.cpp  JSON_Loader.h  Plan.cpp  Plan.h  Suite.cpp  Suite.h  Task.cpp  Task.h  Unit.cpp  Unit.h  Units.cpp  Units.h  helpers.cpp  helpers.h  loaders.cpp  loaders.h
src/logger/: Logger.cpp  Logger.h
src/misc/: helpers.cpp  helpers.h
src/plan/: Plan.cpp  Plan.h  Task.cpp  Task.h
src/shells/: shells.cpp  shells.h
src/sproc/: Sproc.cpp  Sproc.h
src/suite/: Suite.cpp  Suite.h  Unit.cpp  Unit.h
test/: config.json  examplar.variables
test/components/: curses_dialog.bash  dependent_test.bash  fail.bash  (+2 more)
(+31 files in other folders)
